examples/test/testpolicy7533.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7533
  namespace: namespace391
spec:
  podSelector:
    matchLabels:
      key25: value16
      key43: value15
      key13: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value13
          key39: value23
      podSelector:
        matchLabels:
          key5: value7
          key47: value32
          key45: value40
